# dash-evo-tool

./: .env  .env.example  .gitaipconfig  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  DASHPAY_DIP.md  DASHPAY_PLAN.md  LICENSE.md  README.md  SPV_BUG_REPORT.md  SPV_CHECKPOINT_README.md  SPV_MAINNET_ISSUE.md  SPV_PEER_CYCLING.md  SPV_SYNC_ANALYSIS.md  analyze_spv_bug.sh  analyze_spv_issue.md  asalomeri  btc  build.rs  dash-spv-bug-analysis.md  dash-spv-fix-recommendations.md  debug_spv_issue.md  debug_spv_protocol.sh  diagnose_spv_hash.sh  monitor_spv_progress.sh  reset_spv_with_checkpoint.sh  run_with_spv_logs.sh  search_mystery_hash.py  test_db  test_mystery_hash.py  test_peer_cycling.sh  test_spv_2000_bug.sh  test_spv_fix.sh  test_spv_logs.sh  test_spv_mainnet_issue.sh  test_spv_mode.md  test_spv_protocol.sh  test_testnet_config.txt  (+2 more)
.cargo/: config.toml
.github/workflows/: Dockerfile  clippy.yml  release.yml  tests.yml
assets/Fonts/Noto_Sans_Devanagari/: README.txt
assets/Fonts/Noto_Sans_Hebrew/: README.txt
assets/Fonts/Noto_Sans_Khmer/: OFL.txt  README.txt
assets/Fonts/Noto_Sans_Thai/: README.txt
build-tests/: README.md  quick-test-instructions.md  test-build-locally.sh  test-glibc-compatibility.sh  test-linux-builds-manual.md  test-linux-builds.sh  test-single-build.sh
dash-platform-wallet/: Cargo.toml
dash-platform-wallet/src/: lib.rs  secret.rs
dash-platform-wallet/src/kms/: encryption.rs  file_store.rs  generic_kms.rs  generic_unlocked_kms.rs  json_store.rs  keystore.rs  mod.rs  signature.rs  wallet_seed.rs
dash-platform-wallet/src/kms/generic/: key_handle.rs  locked.rs  mod.rs  unlocked.rs
dash-platform-wallet/src/wallet/: dashcore.rs  mod.rs  platform.rs
dash-platform-wallet/tests/: multi_user_test.rs
dash-platform-wallet/tests/generic/: mod.rs
dash_core_configs/: devnet.conf  local.conf  mainnet.conf  testnet.conf
doc/: COMPONENT_DESIGN_PATTERN.md
mac_os/: Info.plist
scripts/: pack.sh
snap/: snapcraft.yaml
src/: aaaa  ahmd alamiri  app.rs  app_dir.rs  asa  bundled.rs  config.rs  context.rs  context_provider.rs  cpu_compatibility.rs  database.rs  lib.rs  logging.rs  main.rs  sdk_wrapper.rs
src/backend_task/: broadcast_state_transition.rs  contract.rs  dashpay.rs  document.rs  mod.rs  platform_info.rs  register_contract.rs  update_data_contract.rs
src/backend_task/contested_names/: mod.rs  query_dpns_contested_resources.rs  query_dpns_vote_contenders.rs  query_ending_times.rs  schedule_dpns_vote.rs  vote_on_dpns_name.rs
src/backend_task/core/: create_asset_lock.rs  mod.rs  refresh_wallet_info.rs  start_dash_qt.rs
src/backend_task/dashpay/: auto_accept_handler.rs  auto_accept_proof.rs  avatar_processing.rs  contact_info.rs  contact_requests.rs  contacts.rs  encryption.rs  encryption_tests.rs  errors.rs  hd_derivation.rs  payments.rs  profile.rs  validation.rs
src/backend_task/identity/: add_key_to_identity.rs  load_identity.rs  load_identity_from_wallet.rs  mod.rs  refresh_identity.rs  refresh_loaded_identities_dpns_names.rs  register_dpns_name.rs  register_identity.rs  top_up_identity.rs  transfer.rs  withdraw_from_identity.rs
src/backend_task/spv/: mod.rs
src/backend_task/spv_v2/: mod.rs
src/backend_task/system_task/: mod.rs
src/backend_task/tokens/: burn_tokens.rs  claim_tokens.rs  destroy_frozen_funds.rs  freeze_tokens.rs  mint_token.rs  mint_tokens.rs  mod.rs  pause_tokens.rs  purchase_tokens.rs  query_my_token_balances.rs  query_token_non_claimed_perpetual_distribution_rewards.rs  query_token_pricing.rs  query_tokens.rs  resume_tokens.rs  set_token_price.rs  transfer_tokens.rs  unfreeze_tokens.rs  update_token_config.rs
src/backend_task/withdrawal_statuses/: mod.rs
src/components/: core_p2p_handler.rs  core_zmq_listener.rs  instant_send_listener.rs  mod.rs  spv_manager.rs
src/database/: asset_lock_transaction.rs  contacts.rs  contested_names.rs  contracts.rs  dashpay.rs  identities.rs  initialization.rs  mod.rs  proof_log.rs  scheduled_votes.rs  settings.rs  tokens.rs  top_ups.rs  utxo.rs  wallet.rs
src/model/: amount.rs  connection_type.rs  contested_name.rs  mod.rs  password_info.rs  proof_log_item.rs  qualified_contract.rs  qualified_identity.rs  settings.rs  wallet.rs
src/model/qualified_identity/: encrypted_key_storage.rs  mod.rs  qualified_identity_public_key.rs
src/model/wallet/: asset_lock_transaction.rs  derivation_path.rs  encryption.rs  index_path.rs  index_path_types.rs  mod.rs  utxos.rs
src/platform/: contested_names.rs  contract.rs  core.rs  document.rs  identity.rs  mod.rs
src/platform/contested_names/: mod.rs  query_dpns_contested_resources.rs  query_dpns_vote_contenders.rs  query_ending_times.rs  vote_on_dpns_name.rs
src/platform/core/: mod.rs  refresh_wallet_info.rs
src/platform/identity/: add_key_to_identity.rs  load_identity.rs  mod.rs  refresh_identity.rs  register_dpns_name.rs  register_identity.rs  withdraw_from_identity.rs
src/platform/withdrawals/: mod.rs
src/ui/: add_identity_screen.rs  add_key_screen.rs  document_query_screen.rs  dpns_contested_names_screen.rs  dpns_vote_scheduling_screen.rs  helpers.rs  identities_screen.rs  key_info.rs  key_info_screen.rs  keys_screen.rs  main.rs  mod.rs  network_chooser_screen.rs  settings_screen.rs  theme.rs  transition_visualizer_screen.rs  withdrawal_statuses_screen.rs  withdraws_status_screen.rs
src/ui/components/: amount_input.rs  clickable_collapsing_header.rs  component_trait.rs  confirmation_dialog.rs  contract_chooser_panel.rs  dashpay_subscreen_chooser_panel.rs  dpns_subscreen_chooser_panel.rs  entropy_grid.rs  funding_widget.rs  identity_selector.rs  key_selector.rs  left_panel.rs  left_wallet_panel.rs  mod.rs  styled.rs  test_label.rs  tokens_subscreen_chooser_panel.rs  tools_subscreen_chooser_panel.rs  top_panel.rs  wallet_unlock.rs
src/ui/contracts_documents/: add_contracts_screen.rs  contracts_documents_screen.rs  create_document_screen.rs  document_query_screen.rs  (+10 more)
src/utils/: egui_mpsc.rs  mod.rs  parsers.rs  path.rs  tasks.rs
tests/kittest/: det_harness.rs  identity.rs  left_panel.rs  main.rs  startup.rs
(+99 files in other folders)
