[package]
name = "dash-platform-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
dash-sdk = { git = "https://github.com/dashpay/platform", rev = "5b8b29df2d0f58f52ae75b8d0672378df4b9e154" }
zeroize = { version = "1.8.1" }
thiserror = "2.0.12"
serde = "1.0.219"
serde_json = "1.0.140"
rand = "0.9.1"
rand_chacha = "0.9.0"
argon2 = "0.5.3"
