[package]
name = "dash-platform-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
dash-sdk = { git = "https://github.com/dashpay/platform", rev = "bab21b3b2b55439389d4bfeb9dd87fcfb805c21b" }
zeroize = { version = "1.8.1" }
thiserror = "2.0.12"
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = { version = "3.14.0", features = ["hex"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
argon2 = { version = "0.5.3", features = ["zeroize"] }
bitflags = "2.9.1"
bip39 = { version = "2.1.0", features = ["all-languages", "rand"] }
aes-gcm = { version = "0.10.3", features = ["zeroize", "heapless"] }
sha2 = "0.10.9"
hex = "0.4.3"
region = { version = "3.0.2" }
tracing = { version = "0.1.41" }
[dev-dependencies]
tempfile = "3.5.0"
